force-app/main/default/objects/Verification__c/Verification__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpVerification</customHelpPage>
    <label>Verification</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Verification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>