force-app/main/default/objects/Verification__c/fields/Attachment_Status__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Status__c</fullName>
    <formula>if(Attachment_Count__c = 0,&quot;No Attachment&quot;,
if(Attachment_Count__c = 1,&quot;Document Attached&quot;,
&quot;Multiple Attachments&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Status</label>
    <type>Text</type>
</CustomField>