force-app/main/default/objects/Verification__c/fields/Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficial Owner</label>
    <referenceTo>Beneficial_Owner__c</referenceTo>
    <relationshipName>Information_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>