force-app/main/default/objects/Verification__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>Director__c</referenceTo>
    <relationshipName>Information_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>