force-app/main/default/objects/Verification__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photo ID</fullName>
            </value>
            <value>
                <fullName>Other (Provide Note)</fullName>
            </value>
            <value>
                <fullName>Shareholder Verification</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>