force-app/main/default/objects/Verification__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered Company Name</fullName>
            </value>
            <value>
                <fullName>Registered Business Number</fullName>
            </value>
            <value>
                <fullName>Trading Name</fullName>
            </value>
            <value>
                <fullName>Business Address</fullName>
            </value>
            <value>
                <fullName>Principal Signatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>