force-app/main/default/objects/Verification__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>EDD</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other (Provide Note)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>