force-app/main/default/objects/Verification__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipName>Company_Information_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>