force-app/main/default/objects/Verification__c/fields/Registration_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Registration_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Bank Account</label>
    <referenceTo>Registration_Bank_Account__c</referenceTo>
    <relationshipName>Information_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>