force-app/main/default/objects/Verification__c/recordTypes/Bank_Account_Evidence.recordType-meta.xml
<RecordType>
    <fullName>Bank_Account_Evidence</fullName>
    <active>true</active>
    <label>Bank Account Evidence</label>
</RecordType>