force-app/main/default/objects/Verification__c/recordTypes/Bank_Account_Evidence_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Bank_Account_Evidence_Read_Only</fullName>
    <active>true</active>
    <label>Bank Account Evidence Read Only</label>
</RecordType>