force-app/main/default/objects/Verification__c/recordTypes/Beneficial_Owner_Evidence.recordType-meta.xml
<RecordType>
    <fullName>Beneficial_Owner_Evidence</fullName>
    <active>true</active>
    <label>Beneficial Owner Evidence</label>
</RecordType>