force-app/main/default/objects/Verification__c/recordTypes/Company_Information_Evidence.recordType-meta.xml
<RecordType>
    <fullName>Company_Information_Evidence</fullName>
    <active>true</active>
    <label>Company Information Evidence</label>
</RecordType>