force-app/main/default/objects/Verification__c/recordTypes/Director_Evidence.recordType-meta.xml
<RecordType>
    <fullName>Director_Evidence</fullName>
    <active>true</active>
    <label>Director Evidence</label>
</RecordType>